--- a/tables/FeedbackOptimizer.tex
+++ b/tables/FeedbackOptimizer.tex
@@ -1,47 +1,52 @@
-%! Author = ???
-%! Date = 2025-08-17
 
 \begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
     \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{feedback (mi=10, n=5)}  & \multicolumn{ 3 }{c}{feedback (mi=5, n=3)}                                                                                          \\
-        \cmidrule(lr){ 3-5 }
-        \cmidrule(lr){ 6-8 }
-        \cmidrule(lr){ 9-11 }
+    \cmidrule(lr){ 3-5 }
+    \cmidrule(lr){ 6-8 }
+    \cmidrule(lr){ 9-11 }
     &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
     \midrule
-        \multirow{3}{*}{\rotatebox{90}{CCHIT}}
-                & P.                     & 0.23  & 0.209  & 0.206  & 0.512  & 0.235  & 0.321  & 0.385  & 0.244  & 0.198  \\
-                & R.                     & 0.155     & 0.155     & 0.157     & 0.037     & 0.14     & 0.101     & 0.089     & 0.111     & 0.157     \\
-                & F\textsubscript{1}     & 0.185         & 0.178         & 0.178         & 0.07         & 0.175         & 0.153         & 0.144         & 0.152         & 0.175         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
-        \multirow{3}{*}{\rotatebox{90}{CM1-NASA}}
-                & P.                     & 0.349  & 0.337  & 0.33  & 0.333  & 0.367  & 0.364  & 0.345  & 0.372  & 0.33  \\
-                & R.                     & 0.644     & 0.644     & 0.644     & 0.644     & 0.644     & 0.444     & 0.644     & 0.644     & 0.644     \\
-                & F\textsubscript{1}     & 0.453         & 0.443         & 0.436         & 0.439         & 0.468         & 0.4         & 0.45         & 0.472         & 0.436         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
-        \multirow{3}{*}{\rotatebox{90}{GANNT}}
-                & P.                     & 0.552  & 0.544  & 0.561  & 0.561  & 0.544  & 0.558  & 0.552  & 0.561  & 0.562  \\
-                & R.                     & 0.544     & 0.544     & 0.544     & 0.544     & 0.544     & 0.426     & 0.544     & 0.544     & 0.529     \\
-                & F\textsubscript{1}     & 0.548         & 0.544         & 0.552         & 0.552         & 0.544         & 0.483         & 0.548         & 0.552         & 0.545         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
-        \multirow{3}{*}{\rotatebox{90}{ModisDataset}}
-                & P.                     & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  \\
-                & R.                     & 0.0     & 0.0     & 0.0     & 0.0     & 0.0     & 0.0     & 0.0     & 0.0     & 0.0     \\
-                & F\textsubscript{1}     & 0.0         & 0.0         & 0.0         & 0.0         & 0.0         & 0.0         & 0.0         & 0.0         & 0.0         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
-        \multirow{3}{*}{\rotatebox{90}{WARC}}
-                & P.                     & 0.394  & 0.38  & 0.377  & 0.403  & 0.381  & 0.38  & 0.394  & 0.412  & 0.376  \\
-                & R.                     & 0.699     & 0.699     & 0.684     & 0.699     & 0.684     & 0.676     & 0.699     & 0.691     & 0.691     \\
-                & F\textsubscript{1}     & 0.504         & 0.492         & 0.486         & 0.511         & 0.489         & 0.487         & 0.504         & 0.516         & 0.487         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
-        \multirow{3}{*}{\rotatebox{90}{dronology}}
-                & P.                     & 0.395  & 0.387  & 0.382  & 0.41  & 0.384  & 1.0  & 0.406  & 0.396  & 0.333  \\
-                & R.                     & 0.695     & 0.695     & 0.682     & 0.691     & 0.645     & 0.0     & 0.691     & 0.691     & 0.245     \\
-                & F\textsubscript{1}     & 0.504         & 0.498         & 0.489         & 0.514         & 0.481         & 0.0         & 0.512         & 0.503         & 0.283         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
-        \multirow{3}{*}{\rotatebox{90}{Avg.}}
-                & P.                     & 0.32  & 0.31  & 0.309  & 0.37  & 0.319  & 0.437  & 0.347  & 0.331  & 0.3  \\
-                & R.                     & 0.456     & 0.456     & 0.452     & 0.436     & 0.443     & 0.275     & 0.444     & 0.447     & 0.378     \\
-                & F\textsubscript{1}     & 0.366         & 0.359         & 0.357         & 0.348         & 0.359         & 0.254         & 0.36         & 0.366         & 0.321         \\
-                \arrayrulecolor{kit-gray30}     \midrule     \arrayrulecolor{black}
+    \multirow{ 3 }{*}{\rotatebox{90}{CCHIT}}
+    & P.    & 0.23    & 0.209    & 0.206    & \textbf{ 0.512 }    & 0.235    & 0.321    & 0.385    & 0.244    & 0.198 \\
+    & R.    & 0.155    & 0.155    & \textbf{ 0.157 }    & 0.037    & 0.14    & 0.101    & 0.089    & 0.111    & \textbf{ 0.157 } \\
+    & F\textsubscript{1}    & \textbf{ 0.185 }    & 0.178    & 0.178    & 0.07    & 0.175    & 0.153    & 0.144    & 0.152    & 0.175 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
+    & P.    & 0.349    & 0.337    & 0.33    & 0.333    & 0.367    & 0.364    & 0.345    & \textbf{ 0.372 }    & 0.33 \\
+    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.444    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 } \\
+    & F\textsubscript{1}    & 0.453    & 0.443    & 0.436    & 0.439    & 0.468    & 0.4    & 0.45    & \textbf{ 0.472 }    & 0.436 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{GANNT}}
+    & P.    & 0.552    & 0.544    & 0.561    & 0.561    & 0.544    & 0.558    & 0.552    & 0.561    & \textbf{ 0.562 } \\
+    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.426    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.529 \\
+    & F\textsubscript{1}    & 0.548    & 0.544    & \textbf{ 0.552 }    & \textbf{ 0.552 }    & 0.544    & 0.483    & 0.548    & \textbf{ 0.552 }    & 0.545 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{ModisDataset}}
+    & P.    & 0.212    & 0.212    & 0.224    & 0.579    & 0.282    & 0.147    & 0.31    & 0.262    & \textbf{ 0.667 } \\
+    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 }    & 0.146 \\
+    & F\textsubscript{1}    & 0.237    & 0.237    & 0.244    & \textbf{ 0.367 }    & 0.275    & 0.19    & 0.257    & 0.265    & 0.24 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{WARC}}
+    & P.    & 0.394    & 0.38    & 0.377    & 0.403    & 0.381    & 0.38    & 0.394    & \textbf{ 0.412 }    & 0.376 \\
+    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.684    & \textbf{ 0.699 }    & 0.684    & 0.676    & \textbf{ 0.699 }    & 0.691    & 0.691 \\
+    & F\textsubscript{1}    & 0.504    & 0.492    & 0.486    & 0.511    & 0.489    & 0.487    & 0.504    & \textbf{ 0.516 }    & 0.487 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{dronology}}
+    & P.    & 0.395    & 0.387    & 0.382    & 0.41    & 0.384    & \textbf{ 1.0 }    & 0.406    & 0.396    & 0.333 \\
+    & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.682    & 0.691    & 0.645    & 0.0    & 0.691    & 0.691    & 0.245 \\
+    & F\textsubscript{1}    & 0.504    & 0.498    & 0.489    & \textbf{ 0.514 }    & 0.481    & 0.0    & 0.512    & 0.503    & 0.283 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
+    & P.    & 0.355    & 0.345    & 0.347    & \textbf{ 0.466 }    & 0.365    & 0.462    & 0.399    & 0.374    & 0.411 \\
+    & R.    & \textbf{ 0.501 }    & \textbf{ 0.501 }    & 0.496    & 0.48    & 0.488    & 0.319    & 0.481    & 0.492    & 0.402 \\
+    & F\textsubscript{1}    & 0.405    & 0.399    & 0.398    & 0.409    & 0.405    & 0.286    & 0.403    & \textbf{ 0.41 }    & 0.361 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
 \end{tabularx}
